2005-06-05  Tim Golden  <mail@timgolden.me.uk>

    * src/pydo/drivers/sqliteconn2.py: added new driver
    for newer pysqlite2/sqlite3 functionality. Specific
    changes: let pysqlite handle conversions. Slight
    change in the method of fetching last inserted sequence.
    autocommit - not supported directly by pysqlite2;
    instead set isolation_level to None.
    * src/pydo/dbi.py: added sqlite2 as driver name
    * tests/fixture.py: special-case sqlite2 on cleanup

2006-03-08  Jacob Smullyan  <smulloni@smullyan.org>

	* MANIFEST.in: now including pdfs, thanks to Marien Zwart for
	pointing out the omission.

2006-03-08  Jacob Smullyan  <smulloni@smullyan.org>

	* doc/Makefile (RST2HTML): changing default paths for rst scripts. 

	* src/pydo/__init__.py: upping version to 2.0.

	* CLASSIFIERS: reclassifying as stable.

2006-02-16  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/base.py (PyDO._sequence_for): don't assume that all
	drivers have a "sequence_mapper" attribute.

2006-02-16  Hamish Lawson  <hbl@st-andrews.ac.uk>

	* src/pydo/base.py: Moved some sequence-mapping code from
	_metapydo to new method PyDO._sequence_for.
    
	* src/pydo/drivers/oracleconn.py: Tidying up of
	OracleDBI.describeTable.

2006-02-14  Hamish Lawson  <hbl@st-andrews.ac.uk>

    * src/pydo/base.py: Added sequence_mapper attribute, a function taking 
	parameters 'table' and 'column' and returning the sequence used in 
	incrementing a column, for those databases that use a sequence for 
	autoincrementing.
    
	* src/pydo/drivers/oracleconn.py: Added OracleDBI.describeTable.


2006-01-13  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/drivers/psycopgconn.py (PsycopgDBI.describeTable): fix
	for when indkey contains negative attnums in finding indices.
	(Currently the policy is not to report such indexes at all.)

2005-11-18  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/base.py (PyDO._joinTableSQL): fix for berlios bug #5665