@@ -1,3 +1,8 @@
+2006-06-07  Jacob Smullyan  <smulloni@smullyan.org>
+
+	* tests/test_dbi.py (test_autocommit2.post): catch and ignore
+	spurious error in post-test step.
+
 2005-06-05  Tim Golden  <mail@timgolden.me.uk>
 
     * src/pydo/drivers/sqliteconn2.py: added new driver
@@ -6,7 +11,9 @@
     change in the method of fetching last inserted sequence.
     autocommit - not supported directly by pysqlite2;
     instead set isolation_level to None.
+	
     * src/pydo/dbi.py: added sqlite2 as driver name
+	
     * tests/fixture.py: special-case sqlite2 on cleanup
 
 2006-03-08  Jacob Smullyan  <smulloni@smullyan.org>
